Refactor error handling and database configuration; update project name in HTML and footer; implement API call hooks and error responses

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,4 +5,4 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 JWT_SECRET_KEY=your-secret-key-here
 
 # Database Settings
-DATABASE_URL=sqlite:///planventure.db
+DATABASE_URL=sqlite:///marketmind.db
