made a bunch of changes, but cleaned up UI a little bit but also added in new backend endpoint that tracks bullish stocks

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -17,3 +17,12 @@ Flask-Migrate==4.0.5
 # Gemini Api
 # google-generativeai
 google-genai
+
+# tradingview
+tradingview-screener
+
+# yfinance
+yfinance
+
+# indicators
+pandas-ta
